tests/error/struct_errors/repeated_generic.err
Error: Duplicate type parameter (at $FILE:17:26)
   | 
15 | 
16 | @guppy.struct(module)
17 | class MyStruct(Generic[X, X]):
   |                           ^ Type parameter `X` cannot be used multiple times

Guppy compilation failed due to 1 previous error
